@@ -1,4 +1,5 @@
 - do not unconfigure timezone if timezone screen is canceled (#33565)
+- update OpenOffice/BrOffice alternative according to selected lang (#37820)
 
 Version 10.16 - 18 March 2008
 
