@@ -6,6 +6,8 @@
     (no timezone selection, ntp settings as advanced)
 - move functions to get available space from installer
   (to be used in draklive-install)
+- localedrake: update OpenOffice/BrOffice alternative according to
+  selected lang (#37820)
 
 Version 10.16.1 - 18 March 2008
 
